Canary Deployment/kubernetes/4-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-test
  namespace: staging
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: api-test
